--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       </div>
     </section>
 
-    <!-- our section -->
+    <!-- our services section -->
     <section class="services-section">
       <div class="services-dark-background">
         <div class="our-service-text">OUR SERVICES</div>
