Mobile Responsive completed

--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
             <li><a href="#contact" class="menu-btn">Contact</a></li>
           </ul>
         </div>
-        <div class="navbar-shopping-cart">
-          <img src="./assets/shopping-cart_wh.png" alt="cart-icon" />
+        <div class="icons-navbar">
+          <div class="navbar-shopping-cart">
+            <img src="./assets/shopping-cart_wh.png" alt="cart-icon" />
+          </div>
+          <div class="menu-btn-icon">
+            <img src="./assets/menu-wh.png" alt="menu-icon" />
+          </div>
         </div>
       </div>
     </nav>
@@ -453,8 +458,8 @@
     <section>
       <div class="reviews-container">
         <div class="review-arrows">
-          <div><</div>
-          <div>></div>
+          <span class="arrow-span-brand">&#139;</span>
+          <span class="arrow-span-brand">&#155;</span>
         </div>
         <div class="review-row">
           <img
@@ -462,17 +467,19 @@
             src="./assets/sample-3.png"
             alt="review-person"
           />
-          <div class="review-person-name">sample</div>
-          <img
-            class="qautation-img"
-            src="./assets/quotation-marks.png"
-            alt="quotationmarks"
-          />
-          <div class="review-text">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi
-            dolore, dolor, aspernatur tenetur pariatur ab praesentium doloribus
-            laborum sequi reiciendis aliquam? Eos facilis libero facere
-            exercitationem voluptas nihil a tempora?
+          <div class="review-row-text-container">
+            <div class="review-person-name">sample</div>
+            <img
+              class="qautation-img"
+              src="./assets/quotation-marks.png"
+              alt="quotationmarks"
+            />
+            <div class="review-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi
+              dolore, dolor, aspernatur tenetur pariatur ab praesentium
+              doloribus laborum sequi reiciendis aliquam? Eos facilis libero
+              facere exercitationem voluptas nihil a tempora?
+            </div>
           </div>
         </div>
       </div>
@@ -480,6 +487,10 @@
 
     <!-- brand section -->
     <section>
+      <div class="arrow-container-brand">
+        <span class="arrow-span-brand">&#139;</span>
+        <span class="arrow-span-brand">&#155;</span>
+      </div>
       <div class="brand-container">
         <img src="./assets/1brand.jpg" alt="br1" />
         <img src="./assets/3brand.jpg" alt="br3" />
@@ -498,8 +509,7 @@
           <img src="./assets/steady-logo-1600256273.png" alt="logo" />
           <div class="footer-main-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
-            id eos. Non alias magni eaque, voluptatibus exercitationem quidem
-            natus magnam delectus explicabo,
+            id eos. Non alias magni eaque, voluptatibus exercitationem
           </div>
           <div class="footer-main-copiright-text">
             <span>&#169;</span>
@@ -535,7 +545,7 @@
           <div class="footer-link-text-row">Business</div>
         </div>
         <div class="footer-links">
-          <div class="footer-link-headline">Contact</div>
+          <div class="footer-link-headline">Contact us</div>
           <div class="footer-link-text-row">
             <img src="./assets/pin.png" alt="facebook" />14,navkar
             complex,university road
