--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
           </div>
           <div class="footer-link-text-row">Business</div>
         </div>
-        <div class="footer-links">
+        <div class="footer-links-contact">
           <div class="footer-link-headline">Contact us</div>
           <div class="footer-link-text-row">
             <img src="./assets/pin.png" alt="facebook" />14,navkar
